// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="sc-jmhOSl dIwtrM"
>
  <ul
    className="sc-cbDwiu sc-hZiMVj eASErZ fyYEjZ"
  >
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        0
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        2
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        3
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        4
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        5
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        6
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        7
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        8
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        9
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        10
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        11
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        12
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        13
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        14
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        15
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        16
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        17
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        18
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        19
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        20
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        21
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        22
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        23
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-BIIkq jqYwgZ"
      >
        24
      </div>
    </li>
  </ul>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-jmhOSl dIwtrM"
  >
    <ul
      className="sc-cbDwiu sc-hZiMVj eASErZ fyYEjZ"
    >
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          24
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          23
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          22
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          21
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          20
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          19
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          18
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          17
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          16
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          15
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          14
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          13
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          12
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          11
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          10
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          9
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          8
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          7
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          6
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          5
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          4
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          3
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          2
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-iwoqQi kviMvN"
        >
          0
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="sc-jmhOSl dIwtrM"
>
  <ul
    className="sc-cbDwiu sc-hZiMVj cIKRJt fyYEjZ"
  >
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-bEeDdh bzOCbi"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-bEeDdh bzOCbi"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-bEeDdh bzOCbi"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-bEeDdh bzOCbi"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-bEeDdh bzOCbi"
      >
        -1
        , 
        -1
      </div>
    </li>
  </ul>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="sc-jmhOSl dIwtrM"
>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Scroll to left
  </button>
  <ul
    className="sc-cbDwiu sc-hZiMVj eASErZ fyYEjZ"
  >
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        0
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        2
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        3
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        4
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        5
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        6
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        7
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        8
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        9
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        10
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        11
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        12
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        13
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        14
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        15
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        16
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        17
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        18
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        19
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        20
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        21
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        22
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        23
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-gVUVPo itIhKB"
      >
        24
      </div>
    </li>
  </ul>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Scroll to Right
  </button>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="sc-jmhOSl dIwtrM"
>
  <ul
    className="sc-cbDwiu sc-hZiMVj cIKRJt fyYEjZ"
  >
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-dexYeb gfhzNv"
      >
        0
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-dexYeb gfhzNv"
      >
        1
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-dexYeb gfhzNv"
      >
        2
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-dexYeb gfhzNv"
      >
        3
      </div>
    </li>
    <li
      className="sc-dDaJoQ kFlKqy"
    >
      <div
        className="sc-dexYeb gfhzNv"
      >
        4
      </div>
    </li>
  </ul>
</div>
`;
